# stm32f769i-disco

./: .gitignore  CMakeLists.txt  Kconfig  README.md  build.sh  prj.conf  west.yml
boards/: stm32f769i_disco.overlay
build_sim/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
build_sim/Kconfig/: Kconfig.dts  Kconfig.modules  kconfig_module_dirs.cmake  kconfig_module_dirs.env
build_sim/Kconfig/arch/: Kconfig
build_sim/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.stm32f769i_disco  Kconfig.sysbuild
build_sim/Kconfig/soc/: Kconfig  Kconfig.defconfig  Kconfig.soc  Kconfig.sysbuild
build_sim/modules/acpica/: cmake_install.cmake
build_sim/modules/adi/: cmake_install.cmake
build_sim/modules/atmel/: cmake_install.cmake
build_sim/modules/cmsis-dsp/: cmake_install.cmake
build_sim/modules/cmsis-nn/: cmake_install.cmake
build_sim/zephyr/: .cmake.dotconfig.checksum  .config  .config-trace.json  .config-trace.pickle  cmake_install.cmake  edt.pickle  edt.pickle.cmake  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  syscall_weakdefs_llext.c  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.hex  zephyr.map  zephyr.stat  zephyr_pre0.map
scripts/: .gitignore  motor.py  motor_control.py
src/: main.c
src/foc/: foc.c  foc.h  pid.c  pid.h
src/interface/: cmd.c  cmd.h
src/motor/: motor.c  motor.h
src/sim/: sim.c  sim.h
(+179 files in other folders)
