cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(bldc_foc_control VERSION 1.0.0)

target_sources(app PRIVATE
    src/main.c
    src/foc/pid.c
    src/foc/foc.c
    src/motor/motor.c
    src/interface/cmd.c
)

target_include_directories(app PRIVATE src)
